; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdkfd/extr_kfd_device_queue_manager_v9.c_compute_sh_mem_bases_64bit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdkfd/extr_kfd_device_queue_manager_v9.c_compute_sh_mem_bases_64bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kfd_process_device = type { i32, i32 }

@SH_MEM_BASES__SHARED_BASE__SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kfd_process_device*)* @compute_sh_mem_bases_64bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compute_sh_mem_bases_64bit(%struct.kfd_process_device* %0) #0 {
  %2 = alloca %struct.kfd_process_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.kfd_process_device* %0, %struct.kfd_process_device** %2, align 8
  %5 = load %struct.kfd_process_device*, %struct.kfd_process_device** %2, align 8
  %6 = getelementptr inbounds %struct.kfd_process_device, %struct.kfd_process_device* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = ashr i32 %7, 48
  store i32 %8, i32* %3, align 4
  %9 = load %struct.kfd_process_device*, %struct.kfd_process_device** %2, align 8
  %10 = getelementptr inbounds %struct.kfd_process_device, %struct.kfd_process_device* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = ashr i32 %11, 48
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @SH_MEM_BASES__SHARED_BASE__SHIFT, align 4
  %15 = shl i32 %13, %14
  %16 = load i32, i32* %4, align 4
  %17 = or i32 %15, %16
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
